--- a/src/main/resources/templates/dataBaseDisplay.html
+++ b/src/main/resources/templates/dataBaseDisplay.html
@@ -12,11 +12,12 @@
         <th>Title</th>
         <!-- Add more columns as needed -->
     </tr>
-    <tr th:each="movie : ${movies}">
+        <tr th:each="movie : ${movies}">
         <td th:text="${movie.id}"></td>
         <td th:text="${movie.ordering}"></td>
         <td th:text="${movie.title}"></td>
     </tr>
+    <div th:if="${error}" th:text="${error}"></div>
 </table>
 </body>
 </html>
