--- a/src/main/resources/templates/searchMovies.html
+++ b/src/main/resources/templates/searchMovies.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <body>
-<form action="/dataBaseDisplay" th:action="@{/dataBaseDisplay}" th:object="${movie}" method="GET">
+<form action="/dataBaseDisplay" th:action="@{/dataBaseDisplay}" th:object="${GetCrewForMovieTitle}" method="GET">
     <table>
         <tr>
-            <td>Search movie</td>
+            <td>Enter the title of a movie, find the writer</td>
             <td><input type="text" th:field="*{title}" /></td>
             <td th:if="${#fields.hasErrors('title')}" th:errors="*{title}">First Name Error</td>
         </tr>
